--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
             href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap"
             rel="stylesheet"
         />
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-XJ1P0TEFYV"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-XJ1P0TEFYV');
+        </script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
         <title>Lavender</title>
     </head>
     <body>
