--- a/index.html
+++ b/index.html
@@ -26,9 +26,24 @@
             gtag('config', 'G-XJ1P0TEFYV');
         </script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
+        <!-- Google Tag Manager -->
+        <script>
+            (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+                new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+                j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+                'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','GTM-W2R389S');
+        </script>
+        <!-- End Google Tag Manager -->
         <title>Lavender</title>
     </head>
     <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript>
+            <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2R389S"
+                height="0" width="0" style="display:none;visibility:hidden"></iframe>
+        </noscript>
+    <!-- End Google Tag Manager (noscript) -->
         <!-- Start Header -->
         <div class="header" id="header">
             <div class="container">
